Started KSP programming objects

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@ body.hasJS #status.online {background: #0c0;}
 			'sciences_attribs':{}
 		},
 		kspObj=new kspParser(),
+		kspSciObj=new kspSci(),
+		kspUniObj=new kspUniverse(),
 		FPSObj=new fpsHandler(5),
 		current_state_key='ready',
 		drag_target = $('#holder'),
