--- a/index.html
+++ b/index.html
@@ -51,16 +51,15 @@ body.hasJS #status.online {background: #0c0;}
 			'sciences':{},
 			'sciences_attribs':{}
 		},
-		kspObj=new kspParser(),
-		kspSciObj=new kspSci(),
 		kspUniObj=new kspUniverse(),
+		kspSciObj=new kspSci(kspUniObj),
+		kspObj=new kspParser(kspUniObj,kspSciObj),
 		FPSObj=new fpsHandler(5),
 		current_state_key='ready',
 		drag_target = $('#holder'),
 		msg_obj = $('#status');
 
 //console.log(kspObj.attr_reader("\r\n\t\t\tid = crewReport@KerbinSrfLandedLaunchPad\r\n\t\t\ttitle = Crew Report from LaunchPad\r\n\t\t\tdsc = 1\r\n\t\t\tscv = 0\r\n\t\t\tsbv = 0.3\r\n\t\t\tsci = 1.5\r\n\t\t\tcap = 1.5",true));
-	if(typeof(FPSObj)!='undefined'){kspObj.fsp_obj=FPSObj;}
 		
 	function update_status_msg(keyIn,extraStr){
 		if(bdcheck_key(loading_stages,keyIn)){
@@ -78,7 +77,7 @@ body.hasJS #status.online {background: #0c0;}
 		//str_rep('-',4);
 		for(var s=0;s<page_data.parsed_science.length;s++){
 			page_data.parsed_science[s].raw_id;
-			var parsed_attr=ksp.parse_sci_id(page_data.parsed_science[s].raw_id);
+			var parsed_attr=kspObj.parse_sci_id(page_data.parsed_science[s].raw_id);
 			page_data.parsed_science[s]={
 				'raw_id':page_data.parsed_science[s].raw_id,
 				'percent':parsed_attr.percent,
