Getting files ready for public

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="stylesheets/css.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -36,8 +37,14 @@
 
       </header>
       <section>
-       
+       <p class="warning-p"><strong class="warn">Warning:</strong> This uses JavaScript to Read your save game file.  It **might** crash your browser.</p>
       </section>
+<section class="wrap">
+	<div id="holder"><p>Drag your KSP Save Game Here</p></div> 
+	<noscript type="text/html"><p id="no-js-msg">JavaScript is Required</p></noscript>
+	<p id="status">Please use the latest Chrome or Firefox Browser.</p>
+
+</section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/bigorangemachine">bigorangemachine</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
